# devbuddy

./: .gitignore  README.md  SETUP.md  docker-compose.yml
docs/: pre-reading-week-01.md  pre-reading-week-02.md  pre-reading-week-03.md  pre-reading-week-04.md  pre-reading-week-05.md  pre-reading-week-06.md  week-01.md  week-02.md  week-03.md  (+3 more)
python/: .env.example  Makefile  install.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
python/scripts/: demo-02-schema-success.py  demo-03-side-by-side.py
python/scripts/week-02/: demo-01-plain-english.py  demo-01-prose-crash.py  demo-02-prompt-json.py  demo-02-raw-vs-pydantic.py  demo-02-schema-success.py  demo-03-inference-parameters.py  demo-03-pydantic-schema.py  demo-03-side-by-side.py  demo-04-temperature-drill.py  explore-readiness-report.py  validate-readiness.py
python/scripts/week-03/: demo-01-embed-retrieve-ground.py  demo-02-hallucinate-ground.py  demo-03-chunk-size.py  demo-04-hybrid-search.py
python/scripts/week-04/: demo-01-tool-call.py  demo-02-tool-routing.py  demo-03-tool-failure.py  demo-04-full-trace.py
python/scripts/week-05/: demo-01-mcp-client.py  demo-02-mcp-with-llm.py
python/scripts/week-06/: demo-01-fixed-chain.py  demo-02-dynamic-routing.py  demo-03-conversational-agent.py
python/src/: __init__.py  agent.py  config.py  cost_tracker.py  guardrails.py  llm.py  mcp_server.py  mcp_tools.py  rag.py  schemas.py  tools.py  tracing.py  verification.py
python/tests/: __init__.py  test_agent.py  test_integration.py  test_mcp_server.py  test_rag.py  test_schemas.py  test_tools.py
(+62 files in other folders)
