[project]
name = "devbuddy"
version = "0.1.0"
description = "DevBuddy AI Practitioner Series - Python Blueprint"
requires-python = ">=3.11"

# Week 0 core only. Keep this small so the first `uv sync` / install is fast.
dependencies = [
    "langchain>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

# Later weeks pull heavier libraries. Install only the week you reach, e.g.:
#   uv pip install -e ".[rag]"      (Week 3)
#   uv pip install -e ".[mcp]"      (Week 5)
#   uv pip install -e ".[agent]"    (Week 6)
[project.optional-dependencies]
rag = [
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-huggingface>=0.1.0,<1.0.0",
    "langchain-qdrant>=0.2.0,<1.0.0",
    "qdrant-client>=1.12.0,<2.0.0",
    "chromadb>=0.5.0,<1.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "rank-bm25>=0.2.0,<1.0.0",
]
mcp = ["mcp>=1.0.0"]
agent = ["langgraph>=0.2.0,<1.0.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
